Add more info for people

--- a/index.html
+++ b/index.html
@@ -68,80 +68,40 @@
 
 	<div>
 		<h2>Program</h2>
-		<p>Obřad začne v 14:00. Časový harmonogram hostiny a zábavy bude ješte upřesněn.</p>
-		<!--
-		<ol>
-			<li>14:00 - obřad</li>
-			<li>15:00 - focení</li>
-			<li>15:30 - přesun do penzionu</li>
-			<li>16:00 - zahájení zábavy</li>
-			<li>18:00 - krájení dortu</li>
-			<li>19:00 - první tanec</li>
-		</ol>
-		-->
+		<ul>
+			<li>13:00 - Přesun z Dubence/Chvalče do Kuksu</li>
+			<li>14:00 - Svatební obřad</li>
+			<li>14:45 - Společné focení</li>
+			<li>16:00 - Přípitek</li>
+			<li>16:30 - Oběd</li>
+			<li>17:30 - Krájení dortu</li>
+			<li>18:30 - První tanec</li>
+			<li>19:30 - Raut</li>
+			<li>20:00 - Volná zábava</li>
+		</ul>
 	</div>
-</section>
 
-<section id="form">
-	<h2>Formulář</h2>
-	<form method="post" action="https://script.google.com/macros/s/AKfycbyOwmYYmsCvKN2kt6SZRGDYI4boSwiXN-_o-1Z6R3A68_D_PzcDWcPNnpnBdhSiOVgC/exec" target="_blank">
-		<label class="label-block form-col-left">
-			Jméno:
-			<input name="firstName" type="text" required>
-		</label>
-		<label class="label-block form-col-right">
-			Příjmení:
-			<input name="lastName" type="text" required>
-		</label>
+	<div>
+		<h2>Další info</h2>
+		<p>V penzionu by pokoje měly být připraveny od 15:00. V den odchodu je pokoj potřeba uvolnit nejpozději do 10:00. Doporučujeme si pročíst <a href="https://penzionnafare.cz/ubytovaci-rad/">ubytovací řád</a> penzionu, a pokud si něčím ještě nebudete jisti, můžete také zavolat do penzionu a zeptat se (<a href="https://penzionnafare.cz/kontakt/">kontakt</a>).</p>
+		<p>Mimo sobotního obřadu, hostiny a zábavy není naplánován žádný společný program. Můžeme ale doporučit návštěvu <a href="https://safaripark.cz/">Zoo ve Dvoře Králové</a> nebo se projít po náučné stezce <a href="https://mapy.cz/s/nogabofuvo">Půjdem spolu do Betléma</a>, podél které jsou sochy Matyáše Brauna a která vás dovede až do Hospitálu Kuks.</p>
+	</div>
 
-		<fieldset class="form-col-both">
-			<legend>Účastním se:</legend>
-			<label><input type="radio" required name="willAttend" value="true">Ano</label>
-			<label><input type="radio" required name="willAttend" value="false">Ne</label>
-		</fieldset>
-
-		<label class="label-block form-col-left">
-			Kontaktní email:
-			<input name="contactEmail" type="email">
-		</label>
-		<label class="label-block form-col-right">
-			Kontaktní tel.:
-			<input name="contactPhone" type="tel" pattern="\+?[0-9 ]+">
-		</label>
-
-		<label class="label-block form-col-left">
-			Počet dospělých:
-			<input name="numAdults" type="number" min="1" value="1">
-		</label>
-		<label class="label-block form-col-right">
-			Počet dětí:
-			<input name="numChildren" type="number" min="0" value="0">
-		</label>
-
-		<fieldset class="form-col-both">
-			<legend>Mám zájem o ubytování:</legend>
-			<label><input type="radio" required name="wantAccomodation" value="true">Ano</label>
-			<label><input type="radio" required name="wantAccomodation" value="false">Ne</label>
-		</fieldset>
-
-		<label class="label-block form-col-left">
-			Ubytování od:
-			<input name="accomodationFrom" type="date" min="2024-04-01" max="2024-04-30" value="2024-04-13">
-		</label>
-		<label class="label-block form-col-right">
-			Počet noclehů:
-			<input name="numNights" type="number" min="1" value="1">
-		</label>
-
-		<label class="label-block form-col-both">
-			Otázky a připomínky (alergie, doprava):
-			<textarea name="extra" rows="3" cols="30"></textarea>
-		</label>
-
-		<input type="submit" value="Odeslat" class="form-col-both">
-
-		<span id="form-status" class="form-col-both bi hidden bi-circle"></span>
-	</form>
+	<div>
+		<h2>Dary</h2>
+			<p>Prosíme, nenoste nám věcné dary. Vše co potřebujeme už doma máme. Pokud by jste nám přeci jen chtěli něco dát, můžete nám přispět na svatbu a svatební cestu. Pokud jste jako my a neradi nosíte hotovost v obálkach, můžete nám peníze převést na jeden z účtů:<ul>
+			<li>Pro CZK<ul>
+				<li>Číslo účtu: 1145690019/3030</li>
+			</ul></li>
+			<li>Pro EUR<ul>
+				<li>Vlastník: Martin Krošlák</li>
+				<li>BIC: TRWIBEB1XXX</li>
+				<li>IBAN: BE88 9670 9129 4241</li>
+				<li>Banka: Wise</li>
+				<li>Adresa: Rue du Trône 100, 3rd floor, Brussels 1050, Belgium</li>
+			</ul></li>
+		</ul></p>
+	</div>
 </section>
 
 <div id="lightbox"></div>
